# snakeme

./: BUG.txt  CHANGELOG.txt  CMakeLists.txt  INSTALL.txt  README.md  README.txt  SoundDOC.txt
SGU/: README.txt
SGU/include/: SGU.h  SGU_GenUtils.h  SGU_List.h  SGU_UI.h  (+14 more)
SGU/src/: CHANGELOG.txt  CMakeLists.txt  SGU_GenUtils.cpp  SGU_List.cpp  SGU_Math.cpp  SGU_Sprite.cpp  SGU_UI_Base.cpp  SGU_UI_SDB.cpp  SGU_UI_Theme.cpp  SGU_UI_WGButton.cpp  SGU_UI_WGFile.cpp  SGU_UI_WGIntBar.cpp  SGU_UI_WGList.cpp  SGU_UI_WGScrollBar.cpp  SGU_UI_WGText.cpp  SGU_UI_WGValueBar.cpp
SGU/src/standalone/: DirLister.cpp  DirLister.h
makprev/: CMakeLists.txt  makprev.cpp
snakeme/: JINGLE.XM  README  X.sml  aqua.smt  atomic.smt  blank.sml  boasprite.snk  candy.smt  chenille.snk  control.ctl  crazy.sml  ctrltype.spr  ctrlwho.spr  ctrlwho1J.spr  ctrlwho2J.spr  demo level.sml  duel.sml  egypt.sml  elephant.snk  etoile.snk  feux.snk  fireframe.snk  fntbigb.spr  fntltlw.spr  fntmdlw.spr  fond01.spr  free.sml  jungle.smt  lang.txt  lvledit.spr  minotaurus1.sml  minotaurus2.sml  mystic.sml  options.ctl  peru.sml  pname.ctl  poisson.snk  ressort.snk  roc.smt  serpent_d_j.snk  (+17 more)
src/: CAliveSnake.cpp  CAliveSnake.h  CDeadSnake.cpp  CDeadSnake.h  CMakeLists.txt  CSnake.cpp  CSnake.h  CSnakeArray.cpp  CSnakeArray.h  CSnakeEngine.cpp  CSnakeEngine.h  CSnakeLevelEditor.cpp  CSnakeLevelEditor.h  CSnakePowerUp.cpp  CSnakePowerUp.h  SnakeDirUtils.h  SnakeMe.cpp  SnakeMe.h  SnakeMeDemo.cpp  SnakeMeDemo.h  SnakeMeSvr.cpp  SnakeUI.cpp  SnakeUI.h  StringTable.cpp  StringTable.h  smver.h
tools/: README.txt
(+3 files in other folders)
